minor spacing fixes

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,5 +1,7 @@
 .gallery-container {
-    margin: 1em 0 1em 0;
+    margin: 1em auto 1em auto;
+
+    text-align: center;
 
     width: 100%;
 }
